tests/baselines/reference/classMemberInitializerWithLamdaScoping3.errors.txt
classMemberInitializerWithLamdaScoping3_1.ts(8,21): error TS2301: Initializer of instance member variable 'messageHandler' cannot reference identifier 'field1' declared in the constructor.


==== classMemberInitializerWithLamdaScoping3_0.ts (0 errors) ====
    var field1: string;
    
==== classMemberInitializerWithLamdaScoping3_1.ts (1 errors) ====
    declare var console: {
        log(msg?: any): void;
    };
    export class Test1 {
        constructor(private field1: string) {
        }
        messageHandler = () => {
            console.log(field1); // But this should be error as the field1 will resolve to var field1 
                        ~~~~~~
!!! error TS2301: Initializer of instance member variable 'messageHandler' cannot reference identifier 'field1' declared in the constructor.
                                 // but since this code would be generated inside constructor, in generated js
                                 // it would resolve to private field1 and thats not what user intended here. 
        };
    }